examples/test/testpolicy3316.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3316
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key10: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value8
      podSelector:
        matchLabels:
          key12: value28
          key23: value37
          key22: value39
